Changelog for HLint

    Make suggesting curry/uncurry a warning instead of an error
1.8.7
    Relax the transformers dependency, works with 0.0.* and 0.1.*
1.8.6
    Export suggestionSeverity/Severity from the API
    Allow hint imports with "hlint", as well as the existing "hint"
1.8.5
    Update the copyright year to 2011
    #400, support more encoding strings, give useful errors
    #401, rename the report template to report_template.html
    Replace filter f x /= [] with any f x, and 2 more similar
1.8.4
    #308, allow haskell-src-exts-1.10.1, which parses Unicode better
    import qualified Char ==> import qualified Data.Char as Char
    #393, fix suggestion for import IO, requires more than System.IO
    #376, note that RecordWildCards implies DisambiguateRecordFields
1.8.3
    Allow uniplate-1.6
    Switch from mtl to transformers
    #373, require haskell-src-exts-1.9.6
    Add a type signature for GHC 7
    Suggest [x | x <- xs] ==> xs, if x is a variable
1.8.2
    #371, foo (\x -> y :: Int -> Int) is not a redundant bracket
    Add a hint to use just equality rather than isJust/fromJust
1.8.1
    Massive speed up for files with many naming hints
    #361, keep module names when suggesting infix
    Add support for wildcard matching on module names
    #357, don't camel case suggest on FOO_A
    #370, fix building with GHC 6.10.4
    #313, upgrade to haskell-src-exts-1.9.4
    Workaround for #358, disable empty where hints
    #355, make "--ignore=Parse error" work
    Add --cpp-simple to run a simple CPP to strip lines begining #
    Add bracketing information if the parent is a case
    Suggest intercalate
1.8
    Make --test --hint=file typecheck a file for valid hints
    #347, Suggest use of otherwise, instead of True, in pattern guards
    Add hints about redundant where statements
    Suggest removal of redundant guards
    Make hints about guards work on patterns/infix matches/case alts
    Make finding guards look a child functions