@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    If the user enters directories containing no files then say
     Make suggesting curry/uncurry a warning instead of an error
 1.8.7
     Relax the transformers dependency, works with 0.0.* and 0.1.*
